06/05/08 Bastien Boussau & Simon Carrignon
* Bug fixed in TreeTools::getLastCommonAncestor.

04/04/08 Julien Dutheil
* Bug fixed in copy ocnstructors: now NH models work with covarions.

27/03/08 Nicolas Galtier & Julien Dutheil
* Bug solved in NNIHomogeneousTreeLikelihood: branch lengths are now correctly
  actualized after a NNI movement. This bug was introduced with version 1.5.
	It mainly caused an exception to be thrown inapropriately.

20/03/08 Julien Dutheil
* Kappa parameter can no longer be 0 (avoid likelihood to be 0 in some cases)
* Newton-Raphson algorithm fixed: deals with case when f'' is equal to zero.
* Reading parameters from file (PhylogeneticApplicationTools) now deals with
  parameter constraints.
* Recopy of Abstract(Non)HomogeneousTreeLikelihood fixed.
* New methods in SubstitutionModelSet.

18/02/08 Celine Scornavacca & Julien Dutheil
* Bug fixed in TreeTemplate::newOutGroup.

21/01/08 Julien Dutheil
* New function TreeTools::checkIds, used in likelihood classes (included in
		version 1.5).
* Important bug fixed in RTreeLikelihood: derivatives are correct when nodes
  id are not reset.
* Important bug fixed in substitution mapping.
* Bug fixed in substitution models with frequency parameters (init from data) !

18/01/08 -*- Version 1.5.0. -*-

18/01/08 Julien Dutheil 
* DistanceEstimation and SitePatterns classes are now Clonable.

18/01/08 Celine Scornavacca & Julien Dutheil 
* New function getNode(name) in TreeTemplate
* New function searNodeWithName dans TreeTemplateTools
* Improved multitree support in Newick

13/01/08 Julien Dutheil
* DRASRTreeLikelihoodData class improved by using the SitePatterns class.

11/01/08 Julien Dutheil
* Inclusion in new namespace bpp.
* Bug fixed in DRNonHomogeneousTreeLikelihood.
* Fixed recently introduced bug in DRHomogeneousTreeLikelihood.

29/12/07 Julien Dutheil
* New class DRNonHomogeneousTreeLikelihood.
* Methods getLogLikelihood now sort terms before adding them.

24/12/07 Julien Dutheil