@@ -215,7 +215,10 @@ class RHomogeneousTreeLikelihood :
 	
 	public:	// Specific methods:
 	
-		void computeTreeLikelihood();
+    DRASRTreeLikelihoodData * getLikelihoodData() { return _likelihoodData; }
+    const DRASRTreeLikelihoodData * getLikelihoodData() const { return _likelihoodData; }
+
+    void computeTreeLikelihood();
 
 		virtual double getDLikelihoodForASiteForARateClass(unsigned int site, unsigned int rateClass) const;
 
